force-app/main/default/objects/CRT_to_Salesforce_Product_Mapping__c/CRT_to_Salesforce_Product_Mapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting stores the mapping of CRT products and Salesforce products

Name field of the custom setting stores the name of Product in CRT</description>
    <label>CRT to Salesforce Product Mapping</label>
</CustomObject>