force-app/main/default/objects/CRT_to_Salesforce_Product_Mapping__c/fields/CRT_Division__c.field-meta.xml
<CustomField>
    <fullName>CRT_Division__c</fullName>
    <description>Division of the product in CRT</description>
    <label>CRT Division</label>
    <length>80</length>
    <type>Text</type>
</CustomField>