force-app/main/default/objects/CRT_to_Salesforce_Product_Mapping__c/fields/SFDC_Division__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Division__c</fullName>
    <description>Division of product in Salesforce</description>
    <label>SFDC Division</label>
    <length>80</length>
    <type>Text</type>
</CustomField>