force-app/main/default/objects/CRT_to_Salesforce_Product_Mapping__c/fields/SFDC_Product__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Product__c</fullName>
    <description>Product name in salesforce</description>
    <label>SFDC Product</label>
    <length>80</length>
    <type>Text</type>
</CustomField>